# P-Machine

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  CmakeLists.txt  Instruction.h  LexicalAnalyzer.h  ParserAndCodeGenerator.h  Tokens.h  VirtualMachine.h  main.cpp
src/Lexical Analyzer/: CMakeLists.txt  main.cpp
src/VM/: CMakeLists.txt  main.cpp
